WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191640
WebKit.DecidePolicyForNavigationActionForHyperlinkThatRedirects API fails when PSON is enabled
https://bugs.webkit.org/show_bug.cgi?id=191640
Summary
WebKit.DecidePolicyForNavigationActionForHyperlinkThatRedirects API fails whe...
Chris Dumez
Reported
2018-11-14 09:59:20 PST
WebKit.DecidePolicyForNavigationActionForHyperlinkThatRedirects API fails when PSON is enabled: /Volumes/Data/slave/highsierra-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/DecidePolicyForNavigationAction.mm:470 Expected equality of these values: WKNavigationTypeLinkActivated Which is: 0 [action navigationType] Which is: -1 /Volumes/Data/slave/highsierra-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/DecidePolicyForNavigationAction.mm:475 Expected equality of these values: "http" [[[action sourceFrame] securityOrigin] protocol] Which is: "" /Volumes/Data/slave/highsierra-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/DecidePolicyForNavigationAction.mm:476 Expected equality of these values: "webkit.org" [[[action sourceFrame] securityOrigin] host] Which is: ""
Attachments
WIP Patch
(15.21 KB, patch)
2018-11-14 13:29 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
WIP Patch
(15.58 KB, patch)
2018-11-14 13:55 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(24.96 KB, patch)
2018-11-14 14:57 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(24.96 KB, patch)
2018-11-14 15:10 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-11-14 13:29:57 PST
Created
attachment 354845
[details]
WIP Patch
Chris Dumez
Comment 2
2018-11-14 13:55:07 PST
Created
attachment 354848
[details]
WIP Patch
Chris Dumez
Comment 3
2018-11-14 14:57:28 PST
Created
attachment 354854
[details]
Patch
Chris Dumez
Comment 4
2018-11-14 15:10:29 PST
Created
attachment 354859
[details]
Patch
WebKit Commit Bot
Comment 5
2018-11-14 19:31:15 PST
Comment on
attachment 354859
[details]
Patch Rejecting
attachment 354859
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 354859, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as
commit-queue@webkit.org
... Fetching:
https://bugs.webkit.org/attachment.cgi?id=354859&action=edit
Fetching:
https://bugs.webkit.org/show_bug.cgi?id=191640
&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Updating working directory Processing patch 354859 from
bug 191640
. Fetching:
https://bugs.webkit.org/attachment.cgi?id=354859
Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to
http://svn.webkit.org/repository/webkit/trunk
... M Source/WebKit/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/Source/WebKit/ChangeLog' is out of date W: c5e0318d3fa563cc200fff320169640f43ce46b6 and refs/remotes/origin/master differ, using rebase: :040000 040000 11b23a455be0f3e2ed0a610affef6aff6cad3463 14e0845f61bbdca5003de71e24e13f5a6ad715db M Source :040000 040000 a8de8ea603dae7aae40ace9f8ae0880781940ab2 4eabb1ae5efee1301a51365814642f0ee0821b50 M Tools Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to
http://svn.webkit.org/repository/webkit/trunk
... M Source/WebKit/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/Source/WebKit/ChangeLog' is out of date W: c5e0318d3fa563cc200fff320169640f43ce46b6 and refs/remotes/origin/master differ, using rebase: :040000 040000 11b23a455be0f3e2ed0a610affef6aff6cad3463 14e0845f61bbdca5003de71e24e13f5a6ad715db M Source :040000 040000 a8de8ea603dae7aae40ace9f8ae0880781940ab2 4eabb1ae5efee1301a51365814642f0ee0821b50 M Tools Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource Current branch master is up to date. Full output:
https://webkit-queues.webkit.org/results/9997858
Chris Dumez
Comment 6
2018-11-14 19:35:45 PST
Committed
r238218
: <
https://trac.webkit.org/changeset/238218
>
Radar WebKit Bug Importer
Comment 7
2018-11-14 19:36:25 PST
<
rdar://problem/46084651
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug