WebKit.DecidePolicyForNavigationActionForHyperlinkThatRedirects API fails when PSON is enabled https://bugs.webkit.org/show_bug.cgi?id=191640

Reviewed by Alex Christensen.

Source/WebKit:

The issue was that when process-swapping on a redirect, the parameters provided by the new
WebContent process for navigationActionData / originatingFrameInfoData / frameSecurityOrigin
are not correct because it does not have sufficient information (it does not know a swap
happened).

To address the issue, we now store the navigationActionData / originatingFrameInfoData /
frameSecurityOrigin on the Navigation object whenever decidePolicyForNavigationAction is
called. If the decidePolicyForNavigationAction is for a redirect, use the ones we stored
on the Navigation object instead of the ones provided by the WebContent process. In case
of redirect, those do not change anyway.

This fixes all WebKit.DecidePolicyForNavigationAction* tests with PSON enabled.

* UIProcess/API/APINavigation.h:
(API::Navigation::currentRequestIsRedirect const):
(API::Navigation::wasUserInitiated const):
(API::Navigation::shouldForceDownload const):
(API::Navigation::treatAsSameOriginNavigation const):
(API::Navigation::hasOpenedFrames const):
(API::Navigation::openedViaWindowOpenWithOpener const):
(API::Navigation::opener const):
(API::Navigation::requesterOrigin const):
(API::Navigation::lockHistory const):
(API::Navigation::lockBackForwardList const):
(API::Navigation::clientRedirectSourceForHistory const):
(API::Navigation::setLastNavigationAction):
(API::Navigation::lastNavigationAction const):
(API::Navigation::setOriginatingFrameInfo):
(API::Navigation::originatingFrameInfo const):
(API::Navigation::setDestinationFrameSecurityOrigin):
(API::Navigation::destinationFrameSecurityOrigin const):
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::decidePolicyForNavigationActionAsync):
(WebKit::WebPageProxy::decidePolicyForNavigationAction):
(WebKit::WebPageProxy::decidePolicyForNavigationActionSync):
* UIProcess/WebPageProxy.h:

Tools:

Add API test coverage.

* TestWebKitAPI/Tests/WebKitCocoa/DecidePolicyForNavigationAction.mm:
(runDecidePolicyForNavigationActionForHyperlinkThatRedirects):
(TEST):

Canonical link: https://commits.webkit.org/206420@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238218 268f45cc-cd09-0410-ab3c-d52691b4dbfc